# enceledus

./: ASSET_ARCHITECTURE.rs  Cargo.toml  GEOMETRY_ANIMATION_SEPARATION.rs  main.rs
animation/: Cargo.toml  basic.rs  clip.rs  controller.rs  curves.rs  frame.rs  lib.rs  pose.rs  skeleton.rs  track.rs  track_transform.rs
math/: Cargo.toml  lib.rs  mat4.rs  quaternion.rs  transform.rs  vec3.rs  vec4.rs
shaders/: animation.vert  common.vert  pbr.frag  phong.frag  shader.frag  shader.vert  shadowmap.frag  shadowmap.vert
src/: ARCHITECTURE.rs  mod.rs
src/app/: gui.rs  integration.rs  main_loop.rs  mod.rs
src/core/: asset.rs  material.rs  mesh.rs  mod.rs  model.rs  scene.rs  skeleton.rs  texture.rs  vertex.rs
src/cpu/: material.rs  mesh.rs  mod.rs  model.rs  node.rs  primitive.rs  skeleton.rs  skin.rs  texture.rs
src/gpu/: mesh.rs  mod.rs  model.rs  primitive.rs  resource_manager.rs  skeleton.rs  texture.rs
src/loader/: gltf_loader.rs  mod.rs
src/model/: loader.rs  material.rs  mesh.rs  mod.rs  node.rs  primitive.rs  scene.rs  skeleton.rs  skin.rs  texture.rs  vertex.rs
src/physics/: mod.rs
src/render/: camera.rs  mod.rs  renderable.rs  renderer.rs  shader.rs
src/renderer/: command.rs  mod.rs  shader.rs  shader_manager.rs
src/renderer/managers/: mod.rs  resources.rs  shader.rs
src/scene/: camera.rs  light.rs  mod.rs
src/utils/: color.rs
src/viewer/: camera.rs  light.rs  mod.rs
